Revert voice join to GET
