# server/src/main/java/com/szampchat/server/SecurityConfig.java
@@ -157,7 +157,7 @@ public class SecurityConfig {
                         .pathMatchers(HttpMethod.DELETE, "/users")
                             .authenticated()
 //                        .pathMatchers("/api/file/**").permitAll()
-                        .pathMatchers(HttpMethod.POST, "/channels/{channelId}/voice/join")
+                        .pathMatchers(HttpMethod.GET, "/channels/{channelId}/voice/join")
                             .access(authMan.create(authFunc.isParticipant))
                         //ReactionController
                         .pathMatchers(HttpMethod.POST, "/channels/{channelId}/messages/{messageId}/reactions")
